samples/_failures_safe/1761355747_c4b3c1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3854d055.c: In function ‘main’:
./samples/SAFE/__tmp_3854d055.c:148:13: error: expected expression at end of input
  148 |             mat2.rows = read_int("Enter rows for matrix 2 (1-10): ",
      |             ^~~~
./samples/SAFE/__tmp_3854d055.c:148:25: error: too few arguments to function ‘read_int’
  148 |             mat2.rows = read_int("Enter rows for matrix 2 (1-10): ",
      |                         ^~~~~~~~
./samples/SAFE/__tmp_3854d055.c:15:5: note: declared here
   15 | int read_int(const char* prompt, int min, int max) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_3854d055.c:148:13: error: expected declaration or statement at end of input
  148 |             mat2.rows = read_int("Enter rows for matrix 2 (1-10): ",
      |             ^~~~
./samples/SAFE/__tmp_3854d055.c:148:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3854d055.c:148:13: error: expected declaration or statement at end of input
